css/main.css
/* ... */
.pre-sale-phase .icon-main .icon-broad,.token-phase-1 .icon-main .icon-fair {
  display: inline-block;
  width: 22px;
  height: 22px;
  background: url(../img/icon-fair.png) no-repeat;
  background-size: 100%;
}

.pre-sale-phase .icon-main .icon-transparent,.token-phase-1 .icon-main .icon-power {
  display: inline-block;
  width: 22px;
  height: 22px;
  background: url(../img/icon-power-pangea.png) no-repeat;
  background-size: 100%;
}

.pre-sale-phase h4,.token-phase-1 h4 {
  font-family: 'HelveticaNeue';
  margin-bottom: 5px;
}

.pre-sale-phase p,.token-phase-1 p {
  font-size: 12px;
}

.bottom-row > .col-4,.top-row > .col {
  padding: 0 25px;
}

@media screen and (min-width: 768px) and (max-width: 991px) {
  .copyright,  .footer .links a {
    font-size: 10px;
  }

  .subscriber-section input[type="text"],  .subscriber-section input[type="email"] {
    width: 100%;
  }
}

@media screen and (max-width: 767px) {
  .token-main .token-content {
    padding: 40px 0;
  }

  .token-main .token-content h2 {
    text-align: center;
    font-size: 26px;
    margin-top: 30px;
    margin-bottom: 0;
  }

  .buy-pat .cta {
    margin-top: 25px;
  }

  .token-content .pre-sale-phase .col-8,  .token-phase-1 .col-8 {
    padding-left: 0 !important;
  }

  .bottom-row > .col-4,  .top-row > .col {
    margin-bottom: 20px;
  }

  body {
    background-attachment: fixed;
    background-size: cover;
    height: auto;
  }

  .token-main {
    background-position: center center;
    background-size: cover;
  }

  .header.open {
    background-color: #1C1D21;
  }

  .cta {
    width: 100%;
  }

  h1 {
    font-size: 28px;
  }

  #nav-icon {
    display: block;
  }

  .container {
    padding: 0 15px;
  }

  .header {
    padding: 25px 0;
  }

  .header .navigation {
    display: block;
    position: fixed;
    top: 70px;
    width: 100%;
    height: 100%;
    z-index: 99;
    background-color: #1C1D21;
    left: -100%;
    transition: all 0.4s linear;
  }

  .header .navigation ul li {
    display: block;
    margin-left: 0;
  }

  .header-animate #nav-icon {
    top: 30px;
  }

  .header .navigation.open {
    left: 0;
  }

  .header .logo a img {
    width: 26px;
    height: 40px;
  }

  .middle-content {
    padding: 75px 0;
    justify-content: center;
  }

  .middle-content .cta-group .cta {
    width: 100%;
    margin-bottom: 20px;
  }

  .middle-content h1 {
    margin: 45px 0 55px;
  }

  .bitnation-features-main .features-box-main {
    margin: 25px 0 0;
  }

  div[class*="col"] {
    width: 100%;
    float: none;
  }

  .social-icons {
    width: 100%;
    margin-bottom: 30px;
  }

  .social-icons:last-child {
    margin-bottom: 0;
  }

  .social-section .social-icon-group .icon-main {
    margin: 0 auto 10px;
  }

  .subscriber-section {
    padding: 30px 0;
  }

  .subscriber-section input {
    width: 100% !important;
  }

  .subscriber-section .cta {
    position: static;
    width: 100%;
    margin-top: 10px;
  }

  .subscriber-section label {
    margin-bottom: 15px;
    display: block;
  }

  .get-in-touch-section {
    background-size: cover;
    padding: 80px 0 60px;
  }

  .get-in-touch-section .form-group {
    margin-bottom: 0;
    flex-wrap: wrap;
  }

  .get-in-touch-section .form-group .form-control {
    width: 100%;
    padding-right: 0;
    margin-bottom: 15px;
  }

  .get-in-touch-section .form-group .form-control input {
    width: 100%;
  }

  .get-in-touch-section .form-group .form-control .cta {
    width: 100%;
  }

  .get-in-touch-section .contact-us-form {
    margin-top: 25px;
  }

  .footer .row-flex {
    flex-wrap: wrap;
  }

  .footer .row-flex .col {
    margin-bottom: 20px;
    width: 100%;
    text-align: center;
  }

  .footer .row-flex .col:last-child {
    margin-bottom: 0;
  }

  .social-section .social-icon-group {
    flex-direction: column;
  }

  .footer .footer-logo-wrapper {
    margin-left: 0;
  }

  .features-box {
    margin-bottom: 50px;
  }

  .bitnation-features-main {
    padding-top: 20px;
  }

  .bitnation-features-main .features-box-main .feat-more-info {
    margin-top: 0;
  }

  .middle-content .cta-group .cta:first-child {
    margin-right: 0;
  }

  .modal .modal-body .token-check-condition .row .col {
    width: 100%;
    margin-bottom: 10px;
  }

  .modal .modal-body .token-check-condition .row {
    margin-bottom: 10px;
  }

  h2 {
    line-height: 150%;
  }
}

.scrollable-content {
  height: 140px;
  overflow-y: auto;
  overflow-x: hidden;
}

.scrollable-content p {
  padding-right: 45px;
}

#buy-token .modal-body {
  height: auto;
}

.modal a {
  color: #41B6E6;
}

.c5.c1,.c0 {
  display: inline-block;
  margin-top: 10px;
}

/* Faq page related css */

.faq-main .faq-main-content {
  padding-top: 132px;
  text-align: left;
}

@media screen and (max-width: 767px) {
  .faq-main .faq-main-content {
    padding-top: 55px;
  }
}

.faq-main .faq-main-content .faq-header {
  padding: 40px 0 55px;
}

.faq-main .faq-main-content .faq-header h2 {
  margin-bottom: 10px;
}

.faq-main .faq-main-content h4 {
  font-family: 'HelveticaNeue';
}

.faq-main .faq-main-content p {
  font-size: 16px;
}

.faq-main .faq-main-content a {
  color: #41B6E6;
}

.faq-main .faq-main-content .sections {
  margin-bottom: 30px;
}

.faq-main .introduction-banner {
  background-image: none;
  height: auto;
}

.faq-main .header {
  background-color: rgba(0, 0, 0, 0.8);
  padding: 15px 0;
}

.faq-main .header .navigation {
  background-color: #000000;
  top: 80px;
}

@media screen and (max-width: 767px) {
  .faq-main #nav-icon {
    top: 35px;
  }
}

.faq-body {
  background-image: none;
  background: #1C1D21;
}

/* TIMELINE
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.timeline-main {
  padding: 65px 0  127px;
}

.timeline ol {
  width: 100%;
  transition: all 1s;
  text-align: left;
  position: relative;
  margin-top: 80px;
  height: 304px;
  display: flex;
  align-items: center;
}
/* ... */

